set up article module
