# modules/users/userRoutes.js
@@ -1,5 +1,8 @@
 var express = require('express');
-const {getUsers, followUser, unfollowUser, getUser, updateUser} = require("./userController");
+const {getUsers, followUser, unfollowUser, getUser, updateUser,blockUser, createUser, createTestUsers, deleteUser,
+    blockUserAsUser
+} = require("./userController");
+const {isAdmin, isAuth} = require("../../middleware/authMiddleware");
 const router = express.Router();
 // const isAuth = require('../../middleware/authMiddleware');
 
@@ -7,11 +10,26 @@ const router = express.Router();
 /* GET users listing. */
 router.get('/', getUsers);
 
+/* POST create admin. */
+router.get( '/testUsers', createTestUsers);
+
+/* POST create admin. */
+router.post( '/createAdmin',isAdmin, createUser);
+
+/* DELETE delete user. */
+router.delete('/:id', deleteUser);
+
 // /* GET single user. */
 router.get('/profile/:id', getUser);
 
 /* PUT update user. */
-router.put('/:id', updateUser);
+router.put('/:id', isAdmin, updateUser);
+
+/* PUT Block user. */
+router.put('/blockAsAdmin/:id', isAdmin,  blockUser);
+
+/* PUT Block user. */
+router.put('/blockAsUser/:id', isAuth,  blockUserAsUser);
 
 /* GET follow user. */
 router.get('/follow/:id', followUser)
